# annex

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HUMANS.md  LICENSE (3).md  PRODUCTION_GAP_REPORT.md  PRODUCTION_ROADMAP.md  README.md  ROADMAP.md  SECURITY.md  TAURI_AUDIT_REPORT.md  config.toml  deploy.ps1  deploy.sh  docker-compose.livekit.yml  docker-compose.yml  docker-entrypoint.sh  foundations.md  release_v0.1.md  repro_bytes.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-desktop.yml
client/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
client/src/: App.css  App.test.tsx  App.tsx  index.css
client/src/components/: AdminPanel.tsx  AudioSettings.tsx  ChannelList.tsx  CreateChannelDialog.tsx  DeviceLinkDialog.tsx  EventLog.tsx  FederationPanel.tsx  IdentitySettings.tsx  IdentitySetup.test.tsx  IdentitySetup.tsx  InfoTip.tsx  LinkPreview.tsx  LiveKitSettings.tsx  MemberList.tsx  MessageInput.tsx  MessageView.tsx  ProfileSwitcher.tsx  ServerHub.tsx  SocialRecoveryDialog.tsx  StartupModeSelector.test.tsx  StartupModeSelector.tsx  StatusBar.tsx  UsernameSettings.tsx  VoicePanel.test.tsx  VoicePanel.tsx
client/src/lib/: api.test.ts  api.ts  db.ts  device-link.ts  invite.ts  link-preview.ts  personas.ts  servers.ts  shamir.ts  startup-prefs.ts  tauri.ts  ws.ts  zk.ts
client/src/stores/: channels.ts  identity.ts  servers.ts  usernames.ts  voice.ts
client/src/types/: circomlibjs.d.ts  index.ts
client/src/workers/: proof.worker.ts
crates/annex-channels/: Cargo.toml
crates/annex-channels/src/: lib.rs
crates/annex-db/: Cargo.toml
crates/annex-db/src/: lib.rs  migrations.rs  pool.rs
crates/annex-db/src/migrations/: 000_init.sql  001_identity.sql  002_nullifiers.sql  003_vrp_registry.sql  004_platform_identity.sql  005_servers.sql  006_server_policy_versions.sql  007_vrp_handshake_log.sql  008_agent_registrations.sql  009_channels.sql  010_messages.sql  011_channel_members.sql  012_graph_nodes.sql  013_graph_edges.sql  014_add_anchor_to_agent_registrations.sql  015_voice_profiles.sql  016_instances.sql  017_federation_agreements.sql  018_federated_identities.sql  019_add_remote_handshake_to_federation_agreements.sql  020_rtx_tables.sql  021_rtx_provenance.sql  022_public_event_log.sql  023_production_indexes.sql  024_nullifier_lookup_columns.sql  024_pseudonym_lookup.sql  025_promote_founder.sql  026_uploads.sql  027_upload_category.sql  028_usernames.sql  029_message_edits.sql  030_federated_identity_verification.sql
crates/annex-db/tests/: integration.rs
crates/annex-desktop/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
crates/annex-desktop/capabilities/: default.json
crates/annex-desktop/icons/: icon.icns
crates/annex-desktop/nsis/: hooks.nsi
crates/annex-desktop/src/: main.rs
crates/annex-federation/: Cargo.toml
crates/annex-federation/src/: db.rs  handshake.rs  lib.rs  types.rs
crates/annex-graph/: Cargo.toml
crates/annex-graph/src/: lib.rs
crates/annex-identity/: Cargo.toml
crates/annex-identity/src/: commitment.rs  lib.rs  merkle.rs  nullifier.rs  platform.rs  poseidon.rs  registry.rs  zk.rs
crates/annex-identity/tests/: common.rs  perf_merkle.rs  persistence.rs  test_nullifier.rs  test_persistence.rs  test_platform.rs  zk_integration.rs
crates/annex-observe/: Cargo.toml
crates/annex-observe/src/: error.rs  event.rs  lib.rs  store.rs  tests.rs
crates/annex-rtx/: Cargo.toml
crates/annex-rtx/src/: error.rs  lib.rs  types.rs  validation.rs
crates/annex-server/: Cargo.toml
crates/annex-server/src/: api.rs  api_admin.rs  api_agent.rs  api_channels.rs  api_federation.rs  api_graph.rs  api_link_preview.rs  api_observe.rs  api_rtx.rs  api_sse.rs  api_upload.rs  api_usernames.rs  api_vrp.rs  api_ws.rs  background.rs  config.rs  lib.rs  main.rs  middleware.rs  policy.rs  retention.rs
crates/annex-server/tests/: agent_api_test.rs  agent_flow_test.rs  agent_stt_test.rs  agent_voice_profile_test.rs  agent_voice_test.rs  agent_ws_behavior.rs  api_admin_policy.rs  api_agent_restrictions.rs  api_auth.rs  api_channel_history.rs  api_channel_membership.rs  api_channels_agent.rs  api_channels_crud.rs  api_federation_attestation.rs  api_federation_channels.rs  api_federation_handshake.rs  api_federation_relay.rs  api_federation_rtx_relay.rs  api_graph.rs  api_graph_nodes.rs  api_identity_query.rs  api_rate_limit.rs  api_registry.rs  api_registry_lists.rs  api_registry_path.rs  api_registry_root.rs  api_rtx_governance.rs  api_rtx_publish.rs  api_rtx_subscribe.rs  api_sse.rs  api_vrp_handshake.rs  api_ws.rs  api_zk_verify.rs  background_pruning_test.rs  concurrency_connection_manager.rs  concurrency_rate_limiter.rs  cors_desktop_origins.rs  federation_lifecycle_test.rs  federation_policy_test.rs  observe_integration.rs  (+6 more)
crates/annex-types/: Cargo.toml
crates/annex-types/src/: lib.rs  policy.rs  voice.rs
crates/annex-voice/: Cargo.toml
crates/annex-voice/src/: agent.rs  config.rs  error.rs  lib.rs  service.rs  stt.rs  tts.rs
crates/annex-voice/tests/: integration_test.rs  tts_test.rs
crates/annex-vrp/: Cargo.toml
crates/annex-vrp/src/: lib.rs  reputation.rs  semantic.rs  server_root.rs  tests.rs  types.rs
crates/annex-vrp/tests/: reputation_test.rs  server_root_test.rs
docs/: deployment.md
docs/adr/: 0001-project-scaffold-dependencies.md  0002-zk-proof-verification.md  0003-voice-tts-model.md  0004-voice-stt-model.md  0005-client-framework.md  0006-zkp-circuit-audit.md
docs/protocol/: agent-connection.md
scripts/: build-desktop.js  build-desktop.sh  prepare-zk-dev.js  setup-piper.ps1  setup-piper.sh
zk/: package-lock.json  package.json
zk/circuits/: identity.circom  membership.circom
zk/scripts/: build-circuits.js  setup-groth16.js  test-proofs.js
