[workspace]
resolver = "2"
members = [
    "crates/annex-server",
    "crates/annex-identity",
    "crates/annex-vrp",
    "crates/annex-graph",
    "crates/annex-channels",
    "crates/annex-voice",
    "crates/annex-federation",
    "crates/annex-rtx",
    "crates/annex-observe",
    "crates/annex-db",
    "crates/annex-types",
    "crates/annex-desktop",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "LicenseRef-Annex-Noncommercial"
repository = "https://github.com/seismicgear/annex"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Identity / crypto (placeholders for Phase 1)
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }

# Testing
tempfile = "3"

# Date/time
chrono = "0.4"

# HTTP client — use rustls only; disable default-tls (native-tls) to avoid
# compiling the schannel/OpenSSL stack alongside rustls.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "charset", "http2", "macos-system-configuration"] }

# Configuration
toml = "0.8"

# OS credential storage (desktop only)
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Internal crates
annex-types = { path = "crates/annex-types" }
annex-db = { path = "crates/annex-db" }
annex-identity = { path = "crates/annex-identity" }
annex-vrp = { path = "crates/annex-vrp" }
annex-graph = { path = "crates/annex-graph" }
annex-channels = { path = "crates/annex-channels" }
annex-voice = { path = "crates/annex-voice" }
annex-federation = { path = "crates/annex-federation" }
annex-rtx = { path = "crates/annex-rtx" }
annex-observe = { path = "crates/annex-observe" }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
