[package]
name = "annex-channels"
version.workspace = true
edition.workspace = true

[dependencies]
annex-types = { workspace = true }
annex-db = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
