[package]
name = "annex-desktop"
version.workspace = true
edition.workspace = true
description = "Annex desktop application — Tauri wrapper for the Annex server and client."

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
annex-server = { path = "../annex-server" }
axum = { workspace = true }
tauri = { version = "2", features = [] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
dirs = "6"
reqwest = { workspace = true }
rfd = "0.15"

toml = { workspace = true }
uuid = { workspace = true }
keyring = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[target.'cfg(windows)'.dependencies]
raw-window-handle = "0.6"
