[package]
name = "annex-federation"
version.workspace = true
edition.workspace = true

[dependencies]
annex-types = { workspace = true }
annex-db = { workspace = true }
annex-rtx = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
annex-vrp = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
