[package]
name = "annex-server"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "annex-server"
path = "src/main.rs"

[dependencies]
annex-types = { workspace = true }
annex-db = { workspace = true }
annex-identity = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { workspace = true, features = ["test-util"] }
