[package]
name = "annex-server"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "annex-server"
path = "src/main.rs"

[dependencies]
annex-types = { workspace = true }
annex-channels = { workspace = true }
annex-db = { workspace = true }
annex-identity = { workspace = true }
annex-vrp = { workspace = true }
rusqlite = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
futures-util = "0.3"
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
annex-graph = { version = "0.0.1", path = "../annex-graph" }

[dev-dependencies]
tokio-tungstenite = "0.28"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
tokio = { workspace = true, features = ["test-util"] }
num-bigint = "0.4"
