[package]
name = "annex-voice"
version.workspace = true
edition.workspace = true

[dependencies]
annex-types = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

livekit-api = "0.4"
livekit-protocol = "0.7"
tokio = { workspace = true, features = ["process", "io-util", "sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = { workspace = true }
