[package]
name = "annex-vrp"
version.workspace = true
edition.workspace = true

[dependencies]
annex-types = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"

[dev-dependencies]
serde_json = { workspace = true }
